Fix overflow from sr-only elements

--- a/src/index.css
+++ b/src/index.css
@@ -202,7 +202,6 @@ textarea {
 
 .editor {
   background: #123;
-  overflow-y: auto;
   display: flex;
   flex-direction: column;
 
@@ -219,11 +218,13 @@ textarea {
   display: grid;
   grid-template-rows: auto 0fr;
   padding-block: calc(var(--border-md) * 1.5);
-  margin-inline: 16px;
+  padding-inline: 16px;
   pointer-events: none;
+  /* Different top and bottom borders because optical illusion */
   border-top: 2px solid transparent;
-  border-bottom: 2px solid #234;
+  border-bottom: 3px solid #234;
   transition: border-color .2s, grid-template-rows .5s;
+  overflow: auto;
 
   &:has(.import-modal[aria-hidden="false"]) {
     grid-template-rows: auto 1fr;
@@ -249,6 +250,7 @@ textarea {
 
   button,
   input::file-selector-button {
+    position: relative;
     display: inline-grid;
     place-items: center;
     background: #234;
